--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone: Asia/Shanghai
 # --------------------------
 title: yunrap                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: 개발 일기   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
