--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ theme: jekyll-theme-chirpy
 baseurl: ''
 
 # the HTML language tag › https://www.w3.org/International/questions/qa-choosing-language-tags
-lang: en-US
+lang: ko
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Seoul
@@ -28,7 +28,7 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://yunrap.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: yunrap            # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
@@ -77,7 +77,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/favicons/스크린샷 2021-05-16 오후 12.19.55.png
+avatar: https://yunrap.github.io/assets/img/favicons/스크린샷 2021-05-16 오후 12.19.55.png
 
 
 # boolean type, the global switch for ToC in posts.
